# the-journal

./: .gitignore  LICENSE  README.md  journal.db  package.json  pyproject.toml
.cursor/: mcp.json
backend/: README.md  crud.py  database.py  env.example  main.py  pyproject.toml  schemas.py
backend/app/core/: config.py  database.py
backend/app/git_work_tracker/: README.md  server.py
backend/app/git_work_tracker/prompts/: git_prompts.py
backend/app/git_work_tracker/tools/: git_tracker.py
backend/app/locallm/: README.md  local_summarizer.py  summarizer-test-data.txt  summarizer.py
backend/app/locallm/utils/: ollama.py
backend/app/mcp/: README.md  server.py
backend/app/mcp/prompts/: prompts.py
backend/app/mcp/tools/: calculator.py
backend/app/routers/: llm.py  notes.py
backend/app/schemas/: llm.py
backend/app/server/: main.py
backend/app/services/: note_service.py
backend/core/: database.py
backend/routers/: notes.py
frontend/: README.md  index.html  main.js  package.json  preload.js  renderer.js  style.css  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Editor.jsx  MainContent.jsx  McpModal.jsx  NoteItem.jsx  RecycleBinActions.jsx  Sidebar.jsx  TabBar.jsx  WelcomeMessage.jsx
frontend/src/context/: ThemeContext.jsx
