[project]
name = "the-journal"
version = "0.1.0"
description = "A journal app using FastAPI and Uvicorn"
authors = [
    { name = "sololobo", email = "smshaon02@yahoo.com" },
    { name = "T4puSD", email = "sdtapusd20@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlmodel>=0.0.27",
    "aiosqlite>=0.21.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "mcp[cli]>=1.20.0",
    "litellm>=1.79.0",
    "loguru>=0.7.3",
    "psutil>=7.1.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]
